# vlmscope

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
benchmarks/: README.md  bench_metrics.py
docs/: api-reference.md  architecture.md  design-notes.md  metrics.md  usage.md
examples/: README.md  captioning_eval.py  compare_runs.py  retrieval_eval.py  vqa_eval.py
scripts/: check.sh  make_toy_data.py  release.sh
tests/: test_aggregate.py  test_cli.py  test_config.py  test_data_loaders.py  test_data_toy.py  test_metrics_bleu.py  test_metrics_cider.py  test_metrics_retrieval.py  test_metrics_rouge.py  test_metrics_text.py  test_metrics_vqa.py  test_models_dummy.py  test_registry.py  test_report.py  test_runner.py  test_tasks_captioning.py  test_tasks_retrieval.py  test_tasks_vqa.py  test_version.py
vlmscope/: __init__.py  aggregate.py  cli.py  config.py  logging_utils.py  registry.py  report.py  runner.py  types.py
vlmscope/data/: __init__.py  loaders.py  toy.py
vlmscope/metrics/: __init__.py  bleu.py  cider.py  retrieval.py  rouge.py  text.py  vqa.py
vlmscope/models/: __init__.py  base.py  dummy.py
vlmscope/tasks/: __init__.py  base.py  captioning.py  retrieval.py  vqa.py
