[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "vlmscope"
description = "A dependency-light evaluation harness for vision-language models (VQA, captioning, image-text retrieval)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Nathanm" }]
keywords = ["vision-language", "evaluation", "vqa", "captioning", "retrieval", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
dependencies = ["numpy>=1.21"]

[project.scripts]
vlmscope = "vlmscope.cli:main"

[project.urls]
Homepage = "https://github.com/nathanm82/vlmscope"
Repository = "https://github.com/nathanm82/vlmscope"
Issues = "https://github.com/nathanm82/vlmscope/issues"

[tool.hatch.version]
path = "vlmscope/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["vlmscope"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["vlmscope", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "W"]
# E501: line length is enforced by the formatter.
# B905: zip lengths are validated explicitly before zipping.
ignore = ["E501", "B905"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.12"
files = ["vlmscope"]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_optional = true
check_untyped_defs = true

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.6",
    "mypy>=1.8",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["vlmscope"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
