[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "vlmscope"
description = "A dependency-light evaluation harness for vision-language models (VQA, captioning, image-text retrieval)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Nathanm" }]
keywords = ["vision-language", "evaluation", "vqa", "captioning", "retrieval", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
dependencies = ["numpy>=1.21"]

[project.urls]
Homepage = "https://github.com/nathanm82/vlmscope"
Repository = "https://github.com/nathanm82/vlmscope"
Issues = "https://github.com/nathanm82/vlmscope/issues"

[tool.hatch.version]
path = "vlmscope/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["vlmscope"]
